# scripcit

./: .gitignore  Cargo.toml  README.md  example.txt
data/: books.csv
src/: citation.rs  main.rs  scriptureregex.rs
src/citation/: address.rs  book_linking.rs  roman_numerals.rs
src/citation/roman_numerals/: lib.rs
