[package]
name = "refmatch"
version = "0.1.0"
authors = ["e2dubba <svirgilgoodwin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
itertools = "0.8.2"
regex = "1"
lazy_static = "1.4.0"
numerals = "0.1.4"
csv = "1"
